# render-agnostic

./: Cargo.toml
examples/: circles.rs  image_images.rs  lines.rs  macroquad_images.rs  pixels.rs  rectangles.rs  text.rs  triangles.rs
src/: image.rs  lib.rs  macroquad.rs
src/image_registries/: image_image_registry.rs  macroquad_image_registry.rs  mod.rs
src/renderers/: image.rs  macroquad.rs  mod.rs
