[package]
name = "render-agnostic"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = { version = "0.2.31", optional = true }
anchor2d = "0.1.10"
glam = { version = "0.30.5", features = ["serde"] }
image = { version = "0.25.6", optional = true }
imageproc = { version = "0.25.0", optional = true }
macroquad = { version = "0.4.14", optional = true }
palette = "0.7.6"
particula-rs = "0.1.5"

[features]
default = ["image", "macroquad"]
image = ["dep:image", "dep:imageproc", "dep:ab_glyph"]
macroquad = ["dep:macroquad"]
