[package]
name = "render-agnostic"
description = "A backend-agnostic 2D rendering library"
license = "MIT OR Apache-2.0"
version = "0.1.16"
edition = "2024"
repository = "https://github.com/JMANN240/render-agnostic"

[dependencies]
ab_glyph = { version = "0.2.31", optional = true }
anchor2d = "0.1.10"
glam = { version = "0.30.5" }
image = { version = "0.25.6", optional = true }
imageproc = { version = "0.25.0", optional = true }
itertools = "0.14.0"
macroquad = { version = "0.4.14", optional = true }
palette = "0.7.6"

[features]
default = ["image", "macroquad"]
image = ["dep:image", "dep:imageproc", "dep:ab_glyph"]
macroquad = ["dep:macroquad"]
